--- a/client/modules/info-control/templates.html
+++ b/client/modules/info-control/templates.html
@@ -3,6 +3,7 @@
   {{#if this}}
  		<h4>Waypoint Info</h4>
         <b>{{name}}</b></br>
+        <em>{{ele}} m slm</em> <br>
   {{else}}
      Hover over a waypoint.
   {{/if}}
